create: Update storage path in summary when VM name changes
If the name is going to influence the default storage path, update it
as people type

--- a/ui/create.ui
+++ b/ui/create.ui
@@ -2175,6 +2175,7 @@ is not yet supported.&lt;/small&gt;</property>
                                         <property name="can_focus">True</property>
                                         <property name="halign">start</property>
                                         <property name="width_chars">25</property>
+                                        <signal name="changed" handler="on_create_vm_name_changed" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
